# ux-charts-wasm-template

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  package.json  webpack.config.js
src/: index.html  lib.rs
src/js/: index.js
src/rust/: lib.rs
src/scss/: styles.scss
static/: index.html
web/: index.html  index.js  styles.scss
